@@ -84,6 +84,7 @@ Release 2.0 - Current Development
 
 * NUTCH-880 REST API for Nutch (ab)
 
+* NUTCH-930 Remove remaining dependencies on Lucene API (ab)
 
 Release 1.1 - 2010-06-06
 
